deployments/k8s/gazon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gazon-service-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gazon-service
    spec:
      containers:
        - name: gazon-service-pod
          image: gazon-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: remotedebugging
              containerPort: 5005
              protocol: TCP
          volumeMounts:
            - name: application-config
              mountPath: /config/application.yml
              subPath: application.yml
      volumes:
        - name: application-config
          configMap:
            name: gazon-config-map
  selector:
    matchLabels:
      app: gazon-service
