deployments/k8s/gazon-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gazon-db-service
spec:
  selector:
    app: gazon-db
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: 5432
  type: ClusterIP
